2004/6/25
0.2.4
[gcmtool] Added info output to file listing (shows file sizes, or 
	directory contents file-count)
[gcmtool] Added full-path output to file listing. Very handy if you 
	wanna grep for something.
[gcmtool] Uses less memory when extracting files > 8MB

2004/6/13
0.2.3
Added a new program: gcmbnrtool for working with banners. See its help 
	for info.
Moved all source into src/ directory for better management.

2004/6/07
0.2.2
Added verbose output (use -v)
Changed some code to make this compile on little endian systems


2004/6/03
0.2.1
Revamped the usage help (use -?)
Added option to use abbreviated commands (ie: --extract-disk-header 
	instead of -edh)
Added injection of the Disk sections
Added extraction of boot DOL (--extract-boot-dol)

2004/5/31
0.2
Added extraction of the Diskheader
Added extraction of DiskHeaderInfo
Added extraction of Apploader (see usage)
Added extraction of files
Fixed typo in usage output

2004/5/30
0.1.1
Played around with the code a bit. It now compiles on LinuxPPC (gcc 
3.2.3). Haven't tried it on an x86 yet. Won't compile with gcc 2.96.

2004/5/26
0.1
Initial release