@@ -70,7 +70,7 @@ DEPDIR = .deps
 INSTALL_STRIP_PROGRAM = ${SHELL} $(install_sh) -c -s
 PACKAGE = gcmtool
 STRIP = 
-VERSION = 0.2.4d
+VERSION = 0.2.4
 am__include = include
 am__quote = 
 install_sh = /Users/spike/gcmtool/cvs/gcmtool/install-sh
