@@ -5,6 +5,8 @@
 [gcmtool] Added full-path output to file listing. Very handy if you 
 	wanna grep for something.
 [gcmtool] Uses less memory when extracting files > 8MB
+[gcmtool] Added ability to put a filesystem into a game from the local 
+	filesystem.
 
 2004/6/13
 0.2.3
